# AlphaNet

./: .gitignore  AlphaNet.sln  AlphaNet.vcxproj  AlphaNet.vcxproj.filters  CMakeLists.txt  README.md  activations.cpp  activations.h  data_loader.cpp  data_loader.h  layers.cpp  layers.h  loss,h.ixx  loss.cpp  loss.h  main.cpp  mathlinalg.cpp  mathlinalg.h  neuralnetwork.cpp  neuralnetwork.h
